--- a/src/assets/sass/dashboard/custom/_fixed-plugin.scss
+++ b/src/assets/sass/dashboard/custom/_fixed-plugin.scss
@@ -166,9 +166,12 @@
                 color: transparent;
             }
         }
-
+        
         .togglebutton{
             text-align: center;
+            display: flex; /* Use Flexbox */
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
 
             .label-switch{
               position: relative;
