--- a/src/assets/sass/dashboard/custom/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/dashboard/custom/_sidebar-and-main-panel.scss
@@ -139,10 +139,10 @@
         display: block;
 
         .caret{
-            top: 14px;
+            top: 50%;
             position: absolute;
-            right: 10px;
-        }
+            right: 1%;
+          }
 
         li{
             > a + div .nav{
