--- a/src/assets/sass/dashboard/custom/_variables.scss
+++ b/src/assets/sass/dashboard/custom/_variables.scss
@@ -43,7 +43,7 @@ $grays: map-merge((
   "900": $gray-900
 ), $grays);
 
-$blue:    #5e72e4 !default;
+$blue:    #1f3cb4 !default;
 $indigo:  #5603ad !default;
 $purple:  #8965e0 !default;
 $pink:    #f3a4b5 !default;
@@ -106,7 +106,7 @@ $info:          #1d8cf8 !default;
 $warning:       #ff8d72 !default;
 $danger:        #fd5d93 !default;
 $black:         #222a42 !default;
-$vue:           #42b883 !default;
+$vue:           #1f3cb4 !default;
 
 // gradient
 $default-states:       #263148 !default;
@@ -116,7 +116,7 @@ $info-states:          #3358f4 !default;
 $warning-states:       #ff6491 !default;
 $danger-states:        #ec250d !default;
 $black-states:         #1d253b !default;
-$vue-states:           #389466 !default;
+$vue-states:           #8a9ddc !default;
 
 $background-black:           #1e1e2f !default;
 $background-states-black:    #1e1e24 !default;
